tools/tests/ui/fail/l1030.cnf
// Test file for error code: L1030
// Expected error: Missing Unexpected character in indentation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
